# Minesweeper-clone

./: CMakeLists.txt  README.md
headers/: Board.h  BoardDrawer.h  Manager.h
src/: Board.cpp  BoardDrawer.cpp  Manager.cpp  main.cpp
